fix: cannot collapse content

--- a/src/less/global.less
+++ b/src/less/global.less
@@ -485,13 +485,13 @@ body:not(.outliner-plugin-dragging) .outliner-editor .markdown-source-view.mod-c
 	display: none;
 }
 
-.search-result-file-match.embedded-part > .embedded-editor-container .markdown-source-view {
-	min-height: fit-content;
-}
-
-.search-result-file-match.embedded-part > .embedded-editor-container .markdown-source-view {
-	min-height: fit-content;
-}
+//.search-result-file-match.embedded-part > .embedded-editor-container .markdown-source-view {
+//	min-height: fit-content;
+//}
+//
+//.search-result-file-match.embedded-part > .embedded-editor-container .markdown-source-view {
+//	min-height: fit-content;
+//}
 
 .search-result-file-match.embedded-part .markdown-source-view .cm-editor {
 	height: 100%;
